--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,8 @@ services:
       - 'c 199:* rmw'
       - 'c 226:* rmw'
     depends_on:
-      - weston
+      weston:
+        condition: service_healthy
 
   weston:
     image: torizon/weston-vivante:3
